refactor: ignore tests for eslint, auto reformat code

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,6 +13,9 @@
       "impliedStrict": true
     }
   },
+  "ignorePatterns": [
+    "test/**/*.js"
+  ],
   "settings": {
     "noInlineConfig": true
   },
