--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "lint": "eslint --ext .js,.ts --fix src/",
     "test": "cross-env DEBUG=rs:* jest --testMatch \"<rootDir>/test/e2e/test/*.test.js\" --noStackTrace --runInBand",
     "test:auth": "cross-env DEBUG=rs:* TEST_MODE=auth jest --noStackTrace",
-    "doc": "jsdoc -c jsdoc.json src/resources/**/*.js",
+    "doc": "jsdoc -c jsdoc.json src/common/*.js src/resources/**/*.js",
     "doc:watch": "nodemon --watch src --exec npm run doc"
   },
   "keywords": [
