--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "lint": "eslint --ext .js,.ts --fix src/",
     "test": "cross-env DEBUG=rs:* jest --testMatch \"<rootDir>/test/e2e/test/*.test.js\" --noStackTrace --runInBand",
     "test:auth": "cross-env DEBUG=rs:* TEST_MODE=auth jest --noStackTrace",
-    "doc": "jsdoc -c jsdoc.json src/common/*.js src/resources/**/*.js",
-    "doc:watch": "nodemon --watch src --exec npm run doc"
+    "doc": "typedoc src/common/*.ts src/resources/**/*.ts",
+    "doc:watch": "npm run doc -- --watch"
   },
   "keywords": [
     "rs",
@@ -59,24 +59,25 @@
     "@types/uuid": "^8.3.0",
     "@types/yamljs": "^0.2.31",
     "@typescript-eslint/eslint-plugin": "^4.25.0",
+    "@typescript-eslint/parser": "^4.25.0",
     "chai": "4.3.4",
     "debug": "4.3.1",
     "dirty-chai": "2.0.1",
-    "docdash": "^1.2.0",
     "eslint": "7.2.0",
     "eslint-config-airbnb-typescript": "^12.3.1",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-prettier": "3.4.0",
+    "eslint-plugin-tsdoc": "^0.2.14",
     "husky": "4.3.8",
     "jest": "26.6.3",
-    "jsdoc": "^3.6.7",
     "lint-staged": "10.5.4",
     "nodemon": "2.0.7",
     "prettier": "2.2.1",
     "supertest": "6.1.3",
     "ts-node": "^10.0.0",
+    "typedoc": "^0.20.36",
     "typescript": "^4.2.4"
   }
 }
