--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "ES2020",
     "module": "CommonJS",
-    "allowJs": true, // false
+    "allowJs": false,
     "rootDir": "./src",
     "baseUrl": "src",
     "outDir": "dist",
