--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "description": "REST service starter for RS School",
   "main": "src/server.js",
   "scripts": {
-    "start": "nodemon --exec 'ts-node' src/server.ts",
+    "start": "NODE_PATH=./src tsnd --respawn src/server.ts",
     "lint": "eslint --ext .js,.ts --fix src/",
     "test": "cross-env DEBUG=rs:* jest --testMatch \"<rootDir>/test/e2e/test/*.test.js\" --noStackTrace --runInBand",
     "test:auth": "cross-env DEBUG=rs:* TEST_MODE=auth jest --noStackTrace",
@@ -73,10 +73,9 @@
     "husky": "4.3.8",
     "jest": "26.6.3",
     "lint-staged": "10.5.4",
-    "nodemon": "2.0.7",
     "prettier": "2.2.1",
     "supertest": "6.1.3",
-    "ts-node": "^10.0.0",
+    "ts-node-dev": "^1.1.6",
     "typedoc": "^0.20.36",
     "typescript": "^4.2.4"
   }
