--- a/.env
+++ b/.env
@@ -4,4 +4,8 @@ AUTH_MODE=false
 JWT_SECRET_KEY=secret-key
 # Set your database connection information here
 MONGO_CONNECTION_STRING=your-mongo-db-connection-string
-POSTGRES_PASSWORD=password
+POSTGRES_PASSWORD=postgres
+POSTGRES_USER=postgres
+POSTGRES_DB=rss
+POSTGRES_PORT=5432
+DB_HOST=db
