--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -37,6 +37,7 @@
     "no-underscore-dangle": "off",
     "import/prefer-default-export": "off",
     "node/no-missing-import": "off",
-    "tsdoc/syntax": "warn"
+    "tsdoc/syntax": "warn",
+    "quotes": ["error", "single"]
   }
 }
