--- a/package.json
+++ b/package.json
@@ -46,8 +46,10 @@
     ]
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "9.0.0",
     "express": "4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.6.0",
     "reflect-metadata": "^0.1.13",
     "swagger-ui-express": "4.1.6",
