--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "yamljs": "0.3.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.11",
     "@types/jsonwebtoken": "^8.5.2",
     "@types/swagger-ui-express": "^4.1.2",
