--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -38,6 +38,7 @@
     "import/prefer-default-export": "off",
     "node/no-missing-import": "off",
     "tsdoc/syntax": "warn",
-    "quotes": ["error", "single"]
+    "quotes": ["error", "single"],
+    "class-methods-use-this": "off"
   }
 }
