--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,9 +3,8 @@
     "target": "ES2020",
     "module": "CommonJS",
     "allowJs": false,
-    "rootDir": "./src",
-    "baseUrl": "src",
-    "outDir": "dist",
+    "outDir": "./dist",
+    "baseUrl": "./",
     "downlevelIteration": false,
     "strict": true,
     "noUnusedLocals": true,
@@ -22,9 +21,8 @@
     "forceConsistentCasingInFileNames": true,
   },
   "exclude": [
-    "node_modules/"
+    "node_modules/",
+    "_src"
   ],
-  "include": [
-    "src"
-  ]
+  "include": ["src"],
 }
