feat: add Auth guard

--- a/package.json
+++ b/package.json
@@ -54,11 +54,13 @@
     "@nestjs/common": "^7.6.15",
     "@nestjs/core": "^7.6.15",
     "@nestjs/platform-express": "^7.6.15",
+    "@nestjs/platform-fastify": "^7.6.18",
     "@nestjs/swagger": "^4.8.2",
     "@nestjs/typeorm": "^7.1.5",
     "bcryptjs": "^2.4.3",
     "dotenv": "9.0.0",
     "express": "4.17.1",
+    "fastify": "^3.18.1",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.6.0",
     "reflect-metadata": "^0.1.13",
