--- a/package.json
+++ b/package.json
@@ -58,6 +58,8 @@
     "@nestjs/swagger": "^4.8.2",
     "@nestjs/typeorm": "^7.1.5",
     "bcryptjs": "^2.4.3",
+    "class-transformer": "^0.4.0",
+    "class-validator": "^0.13.1",
     "dotenv": "9.0.0",
     "express": "4.17.1",
     "fastify": "^3.18.1",
