--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "dotenv": "9.0.0",
     "express": "4.17.1",
     "fastify": "^3.18.1",
+    "fastify-swagger": "^4.8.2",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.6.0",
     "reflect-metadata": "^0.1.13",
